@@ -1,3 +1,8 @@
+2011-06-04  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/12842
+	* elfcode.h (elf_object_p): Revert the last change.
+
 2011-06-04  Alan Modra  <amodra@gmail.com>
 
 	* archures.c (bfd_arch_get_compatible): If one arch is unknown,
